[gd_scene load_steps=28 format=3 uid="uid://d26bbfwsqw03y"]

[ext_resource type="Script" uid="uid://cjxkadwsja4ws" path="res://scenes/characters/enemy_ontogonist_red/enemy_ontogonist_red.gd" id="1_fstj3"]
[ext_resource type="Texture2D" uid="uid://bedop7qn00iyu" path="res://assets/characters/enemy_ontogonist/Ontogonist-die.png" id="2_x6xoq"]
[ext_resource type="Texture2D" uid="uid://d0bxvcq2m3bde" path="res://assets/characters/enemy_ontogonist/red/Ontogonist-red-idle.png" id="3_fstj3"]
[ext_resource type="Texture2D" uid="uid://cpe3abvdkq37m" path="res://assets/characters/enemy_ontogonist/red/Ontogonist-red-walk.png" id="4_b0i5t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3nyqj"]
size = Vector2(9, 21)

[sub_resource type="Animation" id="Animation_3nyqj"]
resource_name = "Death"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Death"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Audio/AudioStreamPlayer:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_e5nqs"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Idle"]
}

[sub_resource type="Animation" id="Animation_fstj3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Audio/AudioStreamPlayer:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_b5up4"]
length = 0.0909091
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Walk"]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Audio/AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [],
"times": PackedFloat32Array()
}
tracks/2/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e5nqs"]
_data = {
&"Death": SubResource("Animation_3nyqj"),
&"Idle": SubResource("Animation_e5nqs"),
&"RESET": SubResource("Animation_fstj3"),
&"Walk": SubResource("Animation_b5up4")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_nu3wy"]
atlas = ExtResource("2_x6xoq")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0o4l0"]
atlas = ExtResource("2_x6xoq")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxu0d"]
atlas = ExtResource("2_x6xoq")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vte4w"]
atlas = ExtResource("2_x6xoq")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4elji"]
atlas = ExtResource("2_x6xoq")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekmfo"]
atlas = ExtResource("2_x6xoq")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_klc8r"]
atlas = ExtResource("2_x6xoq")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1yl01"]
atlas = ExtResource("2_x6xoq")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ept5"]
atlas = ExtResource("2_x6xoq")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jyk47"]
atlas = ExtResource("2_x6xoq")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nel52"]
atlas = ExtResource("2_x6xoq")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ip7h1"]
atlas = ExtResource("2_x6xoq")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u58v4"]
atlas = ExtResource("3_fstj3")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uuy3y"]
atlas = ExtResource("3_fstj3")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5hym"]
atlas = ExtResource("4_b0i5t")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_nu3wy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nu3wy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0o4l0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxu0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vte4w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4elji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ekmfo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_klc8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1yl01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ept5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jyk47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nel52")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ip7h1")
}],
"loop": false,
"name": &"Death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u58v4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uuy3y")
}],
"loop": true,
"name": &"Idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5hym")
}],
"loop": true,
"name": &"Walk",
"speed": 11.0
}]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_ho35q"]
cull_mode = 1
polygon = PackedVector2Array(-4, 11, -4, 13, 3, 13, 3, 11)

[node name="Enemy_ontogonist_red" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_fstj3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 2.5)
shape = SubResource("RectangleShape2D_3nyqj")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 64
lifetime = 0.2
speed_scale = 0.3
emission_shape = 1
emission_sphere_radius = 6.0
gravity = Vector2(0, 100)
color = Color(0.427451, 0.0431373, 0.0431373, 0.827451)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite2D")
libraries = {
&"": SubResource("AnimationLibrary_e5nqs")
}
autoplay = "Idle"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 1, 0.784314)
texture_filter = 1
scale = Vector2(0.8, 0.8)
sprite_frames = SubResource("SpriteFrames_nu3wy")
animation = &"Idle"
autoplay = "Idle"

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2(0, -3)
occluder = SubResource("OccluderPolygon2D_ho35q")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="KillboxArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="KillboxArea"]
position = Vector2(-0.0486109, -1.90735e-06)
scale = Vector2(0.902778, 1)
polygon = PackedVector2Array(2.26923, -9, 4.48461, -8, -5.48461, -8, -3.26923, -9)

[node name="PlayerController" type="RayCast2D" parent="."]
target_position = Vector2(100, 0)

[node name="Audio" type="Node" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Audio"]
volume_db = -1.0
bus = &"ReverbBus"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="KillboxArea" to="." method="_on_killbox_area_body_entered"]
